--- a/ressources/stylesheets/application.css
+++ b/ressources/stylesheets/application.css
@@ -63,15 +63,26 @@ body h1, body h2, body h3, body h4, body h5, body h6, html h1, html h2, html h3,
   margin-bottom: 25px;
 }
 
-/* line 44, ../sass/application.scss */
+/* line 43, ../sass/application.scss */
+.fas {
+  color: #E2E2E3;
+}
+/* line 45, ../sass/application.scss */
+.fas:hover {
+  cursor: pointer;
+  color: #f51754;
+}
+
+/* line 51, ../sass/application.scss */
 .color_vip {
+  display: none;
   z-index: 2000 !important;
   position: absolute;
   height: 100%;
   width: 100%;
   background: rgba(0, 0, 0, 0.8);
 }
-/* line 51, ../sass/application.scss */
+/* line 59, ../sass/application.scss */
 .color_vip .content_vip {
   position: absolute;
   height: 350px;
@@ -84,7 +95,7 @@ body h1, body h2, body h3, body h4, body h5, body h6, html h1, html h2, html h3,
   margin: auto;
   padding: 15px 15px;
 }
-/* line 61, ../sass/application.scss */
+/* line 69, ../sass/application.scss */
 .color_vip .content_vip input {
   width: 99%;
   height: 27.5px;
@@ -96,12 +107,12 @@ body h1, body h2, body h3, body h4, body h5, body h6, html h1, html h2, html h3,
   color: black;
   font-family: 'Montserrat', sans-serif;
 }
-/* line 72, ../sass/application.scss */
+/* line 80, ../sass/application.scss */
 .color_vip .content_vip input:focus {
   border-bottom: 2px solid #f51754;
   color: #f51754;
 }
-/* line 76, ../sass/application.scss */
+/* line 84, ../sass/application.scss */
 .color_vip .content_vip button {
   margin-top: 10px;
   background-color: #f51754;
@@ -111,7 +122,7 @@ body h1, body h2, body h3, body h4, body h5, body h6, html h1, html h2, html h3,
   border: none;
   font-family: 'Montserrat', sans-serif;
 }
-/* line 85, ../sass/application.scss */
+/* line 93, ../sass/application.scss */
 .color_vip .content_vip button:hover {
   cursor: pointer;
   background: #1f1f1f;
@@ -119,7 +130,7 @@ body h1, body h2, body h3, body h4, body h5, body h6, html h1, html h2, html h3,
   border: 1px solid #f51754;
 }
 
-/* line 94, ../sass/application.scss */
+/* line 102, ../sass/application.scss */
 .masque_color {
   position: absolute;
   width: 100%;
@@ -127,18 +138,18 @@ body h1, body h2, body h3, body h4, body h5, body h6, html h1, html h2, html h3,
   background: rgba(46, 47, 47, 0.8);
 }
 
-/* line 101, ../sass/application.scss */
+/* line 109, ../sass/application.scss */
 p {
   margin: 0;
   padding: 0;
 }
 
-/* line 103, ../sass/application.scss */
+/* line 111, ../sass/application.scss */
 li {
   list-style: none;
   padding: 5px 5px;
 }
-/* line 107, ../sass/application.scss */
+/* line 115, ../sass/application.scss */
 li .date {
   margin-top: 7px;
   font-size: 12px;
@@ -146,13 +157,13 @@ li .date {
   float: right;
 }
 
-/* line 114, ../sass/application.scss */
+/* line 122, ../sass/application.scss */
 .list_user_connected {
   list-style: none;
   padding: 10px 10px;
 }
 
-/* line 141, ../sass/application.scss */
+/* line 149, ../sass/application.scss */
 .header {
   position: absolute;
   height: 60px;
@@ -167,7 +178,7 @@ li .date {
   text-transform: uppercase;
 }
 
-/* line 155, ../sass/application.scss */
+/* line 163, ../sass/application.scss */
 .menu {
   display: none;
   z-index: 5;
@@ -180,7 +191,7 @@ li .date {
   text-align: center;
   background-color: #272928;
 }
-/* line 169, ../sass/application.scss */
+/* line 177, ../sass/application.scss */
 .menu a {
   position: relative;
   display: block;
@@ -192,7 +203,7 @@ li .date {
   color: #f51754;
 }
 
-/* line 182, ../sass/application.scss */
+/* line 190, ../sass/application.scss */
 .view {
   position: absolute;
   top: 60px;
@@ -200,7 +211,7 @@ li .date {
   right: 0;
   bottom: 60px;
 }
-/* line 186, ../sass/application.scss */
+/* line 194, ../sass/application.scss */
 .view .alert__users {
   display: none;
   position: absolute;
@@ -212,7 +223,7 @@ li .date {
   background-color: #e74c3c;
   padding: 10px 15px;
 }
-/* line 198, ../sass/application.scss */
+/* line 206, ../sass/application.scss */
 .view .alerte_maintenance {
   position: absolute;
   z-index: 1000 !important;
@@ -224,7 +235,7 @@ li .date {
   padding: 0 25px;
   text-align: center;
 }
-/* line 210, ../sass/application.scss */
+/* line 218, ../sass/application.scss */
 .view .clear {
   position: fixed;
   top: 12.5px;
@@ -232,12 +243,12 @@ li .date {
   float: right;
   font-size: 35px;
 }
-/* line 216, ../sass/application.scss */
+/* line 224, ../sass/application.scss */
 .view .clear:hover {
   cursor: pointer;
   color: #f51754;
 }
-/* line 222, ../sass/application.scss */
+/* line 230, ../sass/application.scss */
 .view .list {
   position: absolute;
   left: 0;
@@ -247,7 +258,7 @@ li .date {
   height: 100%;
   background-color: #1f1f1f;
 }
-/* line 231, ../sass/application.scss */
+/* line 239, ../sass/application.scss */
 .view .list .devenir__vip {
   position: absolute;
   bottom: 0;
@@ -255,16 +266,17 @@ li .date {
   width: 100%;
   left: 0;
   right: 0;
-  background-color: red;
+  background-color: #f51754;
+  font-family: 'Montserrat', sans-serif;
   line-height: 40px;
   color: white;
   text-align: center;
 }
-/* line 241, ../sass/application.scss */
+/* line 250, ../sass/application.scss */
 .view .list .devenir__vip:hover {
   cursor: pointer;
 }
-/* line 246, ../sass/application.scss */
+/* line 255, ../sass/application.scss */
 .view .list .title-list {
   position: relative;
   height: 30px;
@@ -275,7 +287,7 @@ li .date {
   background-color: #1f1f1f;
   text-align: center;
 }
-/* line 255, ../sass/application.scss */
+/* line 264, ../sass/application.scss */
 .view .list li {
   height: 20px;
   left: 25px;
@@ -283,7 +295,7 @@ li .date {
   font-size: 14px;
   text-indent: 35px;
 }
-/* line 263, ../sass/application.scss */
+/* line 272, ../sass/application.scss */
 .view .list .avatar_list {
   height: 25px;
   width: 25px;
@@ -293,7 +305,7 @@ li .date {
   margin-left: -35px;
   margin-right: 25px;
 }
-/* line 274, ../sass/application.scss */
+/* line 283, ../sass/application.scss */
 .view .channel {
   position: absolute;
   top: 0;
@@ -379,20 +391,20 @@ li .date {
 .view .channel .list__salon__active .active__salon {
   background: rgba(245, 23, 84, 0.4);
 }
-/* line 286, ../sass/application.scss */
+/* line 295, ../sass/application.scss */
 .view .message {
   overflow-x: hidden;
   overflow-y: scroll;
   padding: 15px 25px;
 }
-/* line 299, ../sass/application.scss */
+/* line 308, ../sass/application.scss */
 .view .message .left {
   float: left;
   width: 100%;
   color: #f51754;
   word-break: break-all;
 }
-/* line 307, ../sass/application.scss */
+/* line 316, ../sass/application.scss */
 .view .message .right {
   float: left;
   width: 100%;
@@ -400,7 +412,7 @@ li .date {
   word-break: break-all;
 }
 
-/* line 317, ../sass/application.scss */
+/* line 326, ../sass/application.scss */
 .send {
   position: absolute;
   height: 60px;
@@ -409,7 +421,7 @@ li .date {
   right: 0;
   left: 0;
 }
-/* line 324, ../sass/application.scss */
+/* line 333, ../sass/application.scss */
 .send form {
   position: absolute;
   left: 0;
@@ -418,7 +430,7 @@ li .date {
   bottom: 0;
   padding: 10px 10px;
 }
-/* line 329, ../sass/application.scss */
+/* line 338, ../sass/application.scss */
 .send form input {
   width: 82%;
   border: none;
@@ -430,7 +442,7 @@ li .date {
   color: #E2E2E3;
   font-size: 18px;
 }
-/* line 343, ../sass/application.scss */
+/* line 352, ../sass/application.scss */
 .send form button {
   position: absolute;
   top: 0px;
@@ -441,7 +453,7 @@ li .date {
   border: none;
   color: white;
 }
-/* line 354, ../sass/application.scss */
+/* line 363, ../sass/application.scss */
 .send form button i {
   font-size: 25px;
   color: #e5214a;
